--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -1,85 +1,89 @@
-.contact{
-    padding: 0 0 112px 0;
-    .contact_row{
-        display: flex;
-        align-items: flex-start;
-        gap: 58px;
-    }
-    .contact_left{
-        width: 453px;
-        flex: 0 0 auto;
-    }
-    .section_title{
-        margin: 0 0 20px 0;
-    }
-    .desc{
-        color: var(--grey3);
-    }
-    .contact_form{
-        padding: 38px 45px;
-    }
-    button{
-        margin: 12px 0 0 0;
-    }
-    @media (max-width: 768px){
-        padding: 0 0 50px 0;
-        .contact_row{
-            flex-wrap: wrap;
-            gap: 40px;
-        }
-    }
-    @media (max-width: 576px){
-        .contact_form{
-            padding: 0;
-        }
-    }
+.contact {
+	padding: 0 0 112px 0;
+	.contact_row {
+		display: flex;
+		align-items: flex-start;
+		gap: 58px;
+	}
+	.contact_left {
+		width: 453px;
+		flex: 0 0 auto;
+	}
+	.section_title {
+		margin: 0 0 20px 0;
+	}
+	.desc {
+		color: var(--grey3);
+	}
+	.contact_form {
+		padding: 38px 45px;
+	}
+	button {
+		margin: 12px 0 0 0;
+	}
+	@media (max-width: 768px) {
+		padding: 0 0 50px 0;
+		.contact_row {
+			flex-wrap: wrap;
+			gap: 40px;
+		}
+		.contact_left {
+			width: 100%;
+		}
+	}
+	@media (max-width: 576px) {
+		.contact_form {
+			padding: 0;
+		}
+	}
 }
-label{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    margin: 0 0 10px 0;
-    p{
-        font-size: 18px;
-        font-weight: 400;
-        line-height: 20px;
-        color: var(--grey2);
-        margin: 0 0 5px 0;
-    }
-    sup{
-        color: var(--red);
-    }
-    input, select, textarea{
-        font-family: inherit;
-        width: 100%;
-        padding: 10px 19px;
-        font-size: 16px;
-        line-height: 17px;
-        font-weight: 400;
-        color: var(--grey2);
-        border-radius: 15px;
-        border: 1px solid #CBD6E2;
-        background-color: #F6F8FB;
-    }
-    textarea{
-        height: 64px;
-        margin: 0 0 15px 0;
-    }
+label {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	margin: 0 0 10px 0;
+	p {
+		font-size: 18px;
+		font-weight: 400;
+		line-height: 20px;
+		color: var(--grey2);
+		margin: 0 0 5px 0;
+	}
+	sup {
+		color: var(--red);
+	}
+	input,
+	select,
+	textarea {
+		font-family: inherit;
+		width: 100%;
+		padding: 10px 19px;
+		font-size: 16px;
+		line-height: 17px;
+		font-weight: 400;
+		color: var(--grey2);
+		border-radius: 15px;
+		border: 1px solid #cbd6e2;
+		background-color: #f6f8fb;
+	}
+	textarea {
+		height: 64px;
+		margin: 0 0 15px 0;
+	}
 }
-.form_group{
-    display: flex;
-    gap: 44px;
-    margin: 0 0 10px 0;
-    label{
-        width: calc(50% - 22px);
-        margin: 0;
-    }
-    @media (max-width: 576px){
-        flex-wrap: wrap;
-        gap: 10px;
-        label{
-            width: 100%;
-        }   
-    }
+.form_group {
+	display: flex;
+	gap: 44px;
+	margin: 0 0 10px 0;
+	label {
+		width: calc(50% - 22px);
+		margin: 0;
+	}
+	@media (max-width: 576px) {
+		flex-wrap: wrap;
+		gap: 10px;
+		label {
+			width: 100%;
+		}
+	}
 }
-
